--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </form>
     <label for="disallowed-characters">Disallowed Characters</label>
     <input name='disallowed-characters' type='text' id='disallowed-characters'>
+    <br>
+    <label for="allowed-characters">Allowed Characters</label>
+    <input name='allowed-characters' type='text' id='allowed-characters'>
 
     <section>
         <ul id="likely-words">
