Added additional Word List
-Added an option to look through all 5 letter words in the English Language
-Prevented selecting labels

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <br>
     <label for="allowed-characters">Allowed Characters</label>
     <input name='allowed-characters' type='text' id='allowed-characters'>
+    <br>
+    <label for="wordle-words">Only Wordle Words</label>
+    <input name='wordle-words' type='checkbox' id='wordle-words'>
+
 
     <section>
         <ul id="likely-words">
