--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir='ltr' lang="en">
+<meta charset="utf-8">
+
 <head>
-    <meta charset="utf-8">
-
-    <title>Wordle Solver</title>
+    <title>Wordle Hacker</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body onload="init()">
     <form id="word-input">
-        <input type="text" id="char1" maxlength="1" value="" autofocus>
-        <input type="text" id='char2' maxlength="1" value="">
-        <input type="text" id='char3' maxlength="1" value="">
-        <input type="text" id='char4' maxlength="1" value="">
-        <input type="text" id='char5' maxlength="1" value="">
+
+        <div class="row">
+            <input type="text" id='char0' maxlength="1" value="" autofocus>
+            <input type="text" id='char1' maxlength="1" value="">
+            <input type="text" id='char2' maxlength="1" value="">
+            <input type="text" id='char3' maxlength="1" value="">
+            <input type="text" id='char4' maxlength="1" value="">
+        </div>
+        <div class="row">
+            <span id='char0Guess'>A</span>
+            <span id='char1Guess'>A</span>
+            <span id='char2Guess'>A</span>
+            <span id='char3Guess'>A</span>
+            <span id='char4Guess'>A</span>
+        </div>
     </form>
+
     <label for="disallowed-characters">Disallowed Characters</label>
     <input name='disallowed-characters' type='text' id='disallowed-characters'>
     <br>
